# tic-tac-toe

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  setup.sh
src/: main.py
